--- a/src/demo/dashboard.fxml
+++ b/src/demo/dashboard.fxml
@@ -366,7 +366,7 @@
                                     </Tab>
                                     <Tab id="tabtest" fx:id="tabtest">
                                        <content>
-                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                          <AnchorPane fx:id="lblr0" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                              <children>
                                                 <Label layoutX="14.0" text="Pruebas">
                                                    <font>
@@ -419,6 +419,8 @@
                                                       <TableColumn id="columnaitest" fx:id="columnaitest" prefWidth="319.0" text="C3" />
                                                   </columns>
                                                 </TableView>
+                                                <Label disable="true" layoutX="602.0" layoutY="202.0" text="compatible:" />
+                                                <ComboBox fx:id="cbcompatible" disable="true" layoutX="675.0" layoutY="198.0" prefWidth="150.0" promptText="seleccione" />
                                              </children>
                                           </AnchorPane>
                                        </content>
