--- a/src/demo/dashboard.fxml
+++ b/src/demo/dashboard.fxml
@@ -366,7 +366,7 @@
                                     </Tab>
                                     <Tab id="tabtest" fx:id="tabtest">
                                        <content>
-                                          <AnchorPane fx:id="lblr0" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                              <children>
                                                 <Label layoutX="14.0" text="Pruebas">
                                                    <font>
@@ -419,7 +419,7 @@
                                                       <TableColumn id="columnaitest" fx:id="columnaitest" prefWidth="319.0" text="C3" />
                                                   </columns>
                                                 </TableView>
-                                                <Label disable="true" layoutX="602.0" layoutY="202.0" text="compatible:" />
+                                                <Label fx:id="lblr0" disable="true" layoutX="602.0" layoutY="202.0" text="compatible:" />
                                                 <ComboBox fx:id="cbcompatible" disable="true" layoutX="675.0" layoutY="198.0" prefWidth="150.0" promptText="seleccione" />
                                              </children>
                                           </AnchorPane>
@@ -434,55 +434,21 @@
                                                       <Font name="Síragon Regular" size="36.0" />
                                                    </font>
                                                 </Label>
-                                                <Accordion layoutX="14.0" layoutY="93.0" prefHeight="357.0" prefWidth="1013.0">
-                                                  <panes>
-                                                    <TitledPane animated="false" text="fallas">
-                                                      <content>
-                                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                                               <children>
-                                                                  <TableView layoutX="377.0" layoutY="15.0" prefHeight="277.0" prefWidth="620.0">
-                                                                     <columns>
-                                                                        <TableColumn prefWidth="182.0" text="nombre" />
-                                                                        <TableColumn prefWidth="437.0" text="ruta" />
-                                                                     </columns>
-                                                                  </TableView>
-                                                                  <ImageView fitHeight="278.0" fitWidth="200.0" layoutX="148.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
-                                                                  <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" styleClass="standar-button" text="seleccionar imagen">
-                                                                     <font>
-                                                                        <Font name="Síragon Regular" size="12.0" />
-                                                                     </font>
-                                                                  </Button>
-                                                               </children>
-                                                            </AnchorPane>
-                                                      </content>
-                                                    </TitledPane>
-                                                    <TitledPane animated="false" text="pruebas">
-                                                      <content>
-                                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                                               <children>
-                                                                  <Button layoutX="14.0" layoutY="15.0" mnemonicParsing="false" styleClass="standar-button" text="seleccionar imagen">
-                                                                     <font>
-                                                                        <Font name="Síragon Regular" size="12.0" />
-                                                                     </font>
-                                                                  </Button>
-                                                                  <ImageView fitHeight="278.0" fitWidth="200.0" layoutX="147.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true" />
-                                                                  <TableView layoutX="377.0" layoutY="15.0" prefHeight="277.0" prefWidth="620.0">
-                                                                    <columns>
-                                                                      <TableColumn prefWidth="182.0" text="nombre" />
-                                                                      <TableColumn prefWidth="437.0" text="ruta" />
-                                                                    </columns>
-                                                                  </TableView>
-                                                               </children>
-                                                            </AnchorPane>
-                                                      </content>
-                                                    </TitledPane>
-                                                  </panes>
-                                                </Accordion>
-                                                <Button layoutX="918.0" layoutY="454.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="110.0" styleClass="standar-button" text="Continuar">
+                                                <Button layoutX="918.0" layoutY="461.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="110.0" styleClass="standar-button" text="Continuar">
                                                    <font>
                                                       <Font name="Síragon Regular" size="12.0" />
                                                    </font>
                                                 </Button>
+                                                <Button layoutX="162.0" layoutY="132.0" mnemonicParsing="false" styleClass="standar-button" text="seleccionar imagen">
+                                                   <font>
+                                                      <Font name="Síragon Regular" size="12.0" />
+                                                   </font>
+                                                </Button>
+                                                <ScrollPane layoutX="290.0" layoutY="132.0" prefHeight="311.0" prefWidth="738.0">
+                                                   <content>
+                                                      <TilePane prefHeight="308.0" prefWidth="619.0" />
+                                                   </content>
+                                                </ScrollPane>
                                              </children></AnchorPane>
                                        </content>
                                     </Tab>
